<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cash_box">

    <fragment
        android:id="@+id/navigation_cash_box"
        android:name="kg.sunrise.sabs.ui.cash_box.CashBoxFragment"
        android:label="@string/cash_box"
        tools:layout="@layout/fragment_notifications" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_statistics"-->
<!--        android:name="kg.sunrise.sabs.ui.statistics.StatisticsFragment"-->
<!--        android:label="@string/statistics"-->
<!--        tools:layout="@layout/fragment_notifications" />-->

    <fragment
        android:id="@+id/navigation_receipt"
        android:name="kg.sunrise.sabs.ui.receipt.ReceiptFragment"
        android:label="@string/receipt"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="kg.sunrise.sabs.ui.reports.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_still"
        android:name="kg.sunrise.sabs.ui.still.StillFragment"
        android:label="@string/still"
        tools:layout="@layout/fragment_notifications" />
</navigation>
