<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reports.tab.fragments.TabLeftoversFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_black"
                app:layout_constraintTop_toBottomOf="@+id/title_tab"
                app:layout_constraintBottom_toTopOf="@+id/title_tab"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/title_tab"
                android:layout_marginStart="32dp"
                android:textSize="24sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_day"
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraint_top"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/day_name"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textColor="@color/colorSilverB"
                android:textStyle="bold"
                android:text="@string/dn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textColor="@color/colorSilverB"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_layout"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraint_day"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/dish"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time" />
            <TextView
                android:id="@+id/drove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drove"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dish"
                app:layout_constraintEnd_toStartOf="@+id/annulled"/>
            <TextView
                android:id="@+id/annulled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annulled"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cancels"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            android:paddingBottom="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>