<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_time_statistics_list"
            android:text="@string/time_list"
            android:textColor="@color/colorBlue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/product"
            android:text="@string/product"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_marginStart="19dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_time_statistics_list" />

        <TextView
            android:id="@+id/drove_list"
            android:text="@string/people"
            android:textColor="@color/colorSilverB"
            android:textSize="14sp"
            android:layout_marginStart="37dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product" />
<!--        app:layout_constraintEnd_toStartOf="@id/repeal_list"-->

        <TextView
            android:id="@+id/repeal_list"
            android:text="@string/people"
            android:textColor="@color/colorSilverB"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>